--- a/backend/app/templates/forgot_password.html
+++ b/backend/app/templates/forgot_password.html
@@ -4,19 +4,19 @@
 {% block content %}
 <div class="container d-flex align-items-end justify-content-center" style="min-height: 100vh;">
     <div class="card" style="width:300px; height:200px; margin-bottom: 20px;">
-        <div class="card-body">
-            <h2 class="text-center">Password Recovery</h2>
-            <form method="POST" autocomplete="on">
+        <div class="card-body d-flex flex-column" style="height: 100%;">
+            <h2 class="text-center">Don't worry, we'll get it back!</h2>
+            <form method="POST" autocomplete="on" class="d-flex flex-column" style="flex-grow: 1; justify-content: center;">
                 <div class="form-group">
-                    <label for="email_input"></label>
                     <input type="email" id="email_input" name="email" class="form-control" placeholder="Enter your email" required autocomplete="email">
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Send</button>
+                <button type="submit" class="btn btn-primary btn-block mt-3">Send</button>
             </form>
         </div>
     </div>
 </div>
 {% endblock %}
+
 
 
 
