--- a/backend/app/templates/forgot_password.html
+++ b/backend/app/templates/forgot_password.html
@@ -1,18 +1,21 @@
-{% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        <div class="alert-container">
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            {% endfor %}
-        </div>
-    {% endif %}
-{% endwith %}
+{% extends "base.html" %}
+{% set background_image = url_for('static', filename='images/forgot_password_background.jpg') %}
 
+{% block content %}
+<div class="container d-flex align-items-end justify-content-center" style="min-height: 100vh;">
+    <div class="card" style="width:300px; height:200px; margin-bottom: 20px;">
+        <div class="card-body d-flex flex-column" style="height: 100%;">
+            <h2 class="text-center">Don't worry, we'll get it back!</h2>
+            <form method="POST" autocomplete="on" class="d-flex flex-column" style="flex-grow: 1; justify-content: center;">
+                <div class="form-group">
+                    <input type="email" id="email_input" name="email" class="form-control" placeholder="Enter your email" required autocomplete="email">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block mt-3">Send</button>
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock %}
 
 
 
